--- a/cursos.html
+++ b/cursos.html
@@ -14,9 +14,9 @@
 				<!-- MENU PARA DESKTOP -->
 				<ul class="menu right hide-on-med-and-down blue">
 					<li><a href="">Alunos</a></li>
-					<li><a href="">Cadastro de Alunos</a></li>
+					<li><a href="index.html">Cadastro de Alunos</a></li>
 					<li><a href="">Cursos</a></li>
-					<li><a href="cursos.html">Cadastro de Cursos</a></li>
+					<li><a href="">Cadastro de Cursos</a></li>
 					<li><a href="">Sair</a></li>
 				</ul>				
 			</div>
@@ -25,39 +25,26 @@
 	<body>
     <header>
 
-	<div class="frase1 card-panel white center"><strong>Cadastro de Alunos</strong></div>
+	<div class="frase1 card-panel white center"><strong>Cadastro de Cursos</strong></div>
 	<div class=	"row">
 		<form class="col s12">
 			<div class="input-field col s6"> <!--s6, largura-->
 				<input type="number" id="cod" placeholder="Código de identificação">
-				<label for="cod">Código do Aluno</label>
+				<label for="cod">Código do Curso</label>
 			</div>
 			<div class="input-field col s6">
-				<input type="text" nome="NomeAluno" placeholder="Nome Completo">
-				<label for="NomeAluno">Nome do Aluno</label>
+				<input type="text" nome="NomeCurso" placeholder="Insira o nome do curso">
+				<label for="NomeAluno">Nome do Curso</label>
 			</div>
 			<div class="input-field col s6">
-				<input type="text" nome="Cpf" placeholder="CPF">
-				<label for="Cpf">CPF</label>
+				<input type="text" nome="dataCadastro" placeholder="DATA">
+				<label for="dataCadastro">Data</label>
 			</div>
 			<div class="input-field col s6">
-				<input type="text" nome="Endereco" placeholder="Endereço">
-				<label for="Endereco">Endereço</label>
+				<input type="text" nome="CH" placeholder="Carga Horária do Curso">
+				<label for="CH">Carga Horária</label>
 			</div>
-			<div class="input-field col s6">
-				<input type="text" nome="Cep" placeholder="CEP">
-				<label for="Cep">CEP</label>
-			</div>
-			<div class="input-field col s6">
-				<input type="email" nome="email" placeholder="email" class="validate">
-				<label data-error="Email inválido"
-				data-sucess="Email válido" for="email">Seu email</label>
-			</div>
-			<div class="input-field col s6">
-				<input type="text" nome="Tel" placeholder="PHONE">
-				<label for="Tel">Telefone</label>
-			</div>
-			<a href="#" class="btn waves-effect waves-light" type="enviar" name="enviar"> Cadastrar</a>
+			  <a href="#" class="btn2 waves-effect waves-light btn-small" type="enviar2" name="enviar2">Cadastrar</a>
 		</form>
     <div class="footer">
   <p>Rita Lima DEV | 2019°</p>
