--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
 					<li><a href="">Cadastro de Alunos</a></li>
 					<li><a href="">Cursos</a></li>
 					<li><a href="cursos.html">Cadastro de Cursos</a></li>
-					<li><a href="">Sair</a></li>
+					<li><a href="login.html">Sair</a></li>
 				</ul>				
 			</div>
 		</nav>
 	</head>
 	<body>
-    <header>
+    <main>
 
 	<div class="frase1 card-panel white center"><strong>Cadastro de Alunos</strong></div>
-	<div class=	"row">
+	<div class=	"row container">
 		<form class="col s12">
 			<div class="input-field col s6"> <!--s6, largura-->
 				<input type="number" id="cod" placeholder="Código de identificação">
@@ -59,9 +59,28 @@
 			</div>
 			<a href="#" class="btn waves-effect waves-light" type="enviar" name="enviar"> Cadastrar</a>
 		</form>
-    <div class="footer">
-  <p>Rita Lima DEV | 2019°</p>
-</div>
+	</div>
+</main>
+    <footer class="page-footer">
+          <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+                <h5 class="white-text">Footer Content</h5>
+                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+              </div>
+
+            </div>
+          </div>
+          <div class="footer-copyright">
+            <div class="container">
+            Rita Lima DEV | 2019°
+            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+
+            </div>
+          </div>
+        </footer>         
+
+  </div> 
     <!--Jquery-->
      <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
      <!--Materialize JS-->
